[gd_scene load_steps=30 format=3 uid="uid://csods63kkwhgi"]

[ext_resource type="Script" uid="uid://dva8mouv2org7" path="res://Pong_Simply/PLRPADDLE.gd" id="1_4mu26"]
[ext_resource type="Script" uid="uid://ct5hfmos87owd" path="res://Pong_Simply/game_main.gd" id="1_gycf2"]
[ext_resource type="Texture2D" uid="uid://dimspc6t0m05j" path="res://assets/Bouncy Platform Long.png" id="1_qlr0b"]
[ext_resource type="Script" uid="uid://cx18jr5w2j7w4" path="res://Pong_Simply/start_button.gd" id="3_da4je"]
[ext_resource type="Script" uid="uid://ba5xncuctcfin" path="res://BALL.gd" id="3_g3aib"]
[ext_resource type="Script" uid="uid://3ina65iywbul" path="res://Pong_Simply/OPPPADDLE.gd" id="3_ihpcj"]
[ext_resource type="Texture2D" uid="uid://cvg1di0csxpef" path="res://assets/ballBlue_10.png" id="6_2wsgh"]
[ext_resource type="Script" uid="uid://ckxg4jd40706v" path="res://Pong_Simply/BALLTIMER.gd" id="6_gj443"]
[ext_resource type="Script" uid="uid://bgqkh7tyc2y2a" path="res://Pong_Simply/PLRGOAL.gd" id="7_ihpcj"]
[ext_resource type="Script" uid="uid://ce54h0fdd0tw4" path="res://Pong_Simply/OPPGOAL.gd" id="8_2wsgh"]
[ext_resource type="Script" uid="uid://c4bqeg07x2x7o" path="res://Pong_Simply/CLDWNTIMER.gd" id="11_fl48u"]
[ext_resource type="Script" uid="uid://efrexh55qi0m" path="res://Pong_Simply/PLRSCORE.gd" id="11_gycf2"]
[ext_resource type="Script" uid="uid://c2wuihyicq4rk" path="res://Pong_Simply/OPPSCORE.gd" id="12_fl48u"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2wsgh"]
radius = 30.0
height = 206.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g3aib"]
radius = 30.0
height = 206.0

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_2wsgh"]
friction = 0.0
bounce = 10.0

[sub_resource type="CircleShape2D" id="CircleShape2D_da4je"]
radius = 36.0

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_gxgl3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ihpcj"]
size = Vector2(1600, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q0hs8"]
size = Vector2(1600, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7dyep"]
size = Vector2(125, 800)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fl48u"]
bg_color = Color(0.674982, 0.757743, 0.975752, 1)

[sub_resource type="Gradient" id="Gradient_jgcnq"]
colors = PackedColorArray(0, 0.105882, 0.945098, 1, 0.0901961, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_86qg4"]
gradient = SubResource("Gradient_jgcnq")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c6tex"]
texture = SubResource("GradientTexture2D_86qg4")
modulate_color = Color(0.376471, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_exx7t"]
bg_color = Color(0.828264, 0.483831, 0.539453, 1)

[sub_resource type="Gradient" id="Gradient_86qg4"]
colors = PackedColorArray(0.854902, 0.172549, 0, 1, 0.996133, 0.414922, 0.439209, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_c6tex"]
gradient = SubResource("Gradient_86qg4")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jx0u2"]
texture = SubResource("GradientTexture2D_c6tex")

[node name="Arena" type="Node"]
script = ExtResource("1_gycf2")

[node name="MainMenu" type="Control" parent="."]
top_level = true
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -800.0
offset_top = -302.0
offset_right = 800.0
offset_bottom = 504.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Difficulty" type="OptionButton" parent="MainMenu"]
layout_mode = 2
offset_left = 400.0
offset_top = 385.0
offset_right = 600.0
offset_bottom = 425.0
alignment = 1
allow_reselect = true
item_count = 3
popup/item_0/text = "Hard AI"
popup/item_0/id = 0
popup/item_1/text = "Medium AI"
popup/item_1/id = 1
popup/item_2/text = "Easy AI"
popup/item_2/id = 2

[node name="ScoreMax" type="OptionButton" parent="MainMenu"]
layout_mode = 2
offset_left = 1000.0
offset_top = 385.0
offset_right = 1200.0
offset_bottom = 425.0
item_count = 4
popup/item_0/text = "3"
popup/item_0/id = 0
popup/item_1/text = "5"
popup/item_1/id = 1
popup/item_2/text = "10"
popup/item_2/id = 2
popup/item_3/text = "Endless"
popup/item_3/id = 3

[node name="SETUPBUTTON" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 701.0
offset_top = 575.0
offset_right = 901.0
offset_bottom = 625.0
theme_override_font_sizes/font_size = 20
text = "Start Game"

[node name="Player" type="Node2D" parent="."]
position = Vector2(200, 600)

[node name="PlayerChar" type="CharacterBody2D" parent="Player"]
script = ExtResource("1_4mu26")

[node name="PlrSprite" type="Sprite2D" parent="Player/PlayerChar"]
rotation = -1.57079
scale = Vector2(0.651158, -0.94443)
texture = ExtResource("1_qlr0b")

[node name="PlrHTB" type="CollisionShape2D" parent="Player/PlayerChar"]
shape = SubResource("CapsuleShape2D_2wsgh")

[node name="Opponent" type="Node2D" parent="."]
position = Vector2(1400, 600)

[node name="OppChar" type="CharacterBody2D" parent="Opponent"]
script = ExtResource("3_ihpcj")

[node name="OppSprite" type="Sprite2D" parent="Opponent/OppChar"]
rotation = -1.57079
scale = Vector2(0.651158, -0.94443)
texture = ExtResource("1_qlr0b")

[node name="OppHTB" type="CollisionShape2D" parent="Opponent/OppChar"]
shape = SubResource("CapsuleShape2D_g3aib")

[node name="Ball" type="RigidBody2D" parent="."]
position = Vector2(800, 600)
physics_material_override = SubResource("PhysicsMaterial_2wsgh")
gravity_scale = 0.0
linear_damp_mode = 1
angular_damp_mode = 1
script = ExtResource("3_g3aib")

[node name="Sprite2D" type="Sprite2D" parent="Ball"]
position = Vector2(6.09159e-05, 0)
scale = Vector2(0.483108, 0.483108)
texture = ExtResource("6_2wsgh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("CircleShape2D_da4je")

[node name="Timer" type="Timer" parent="Ball"]
one_shot = true
script = ExtResource("6_gj443")

[node name="StartButton" type="Button" parent="."]
top_level = true
anchors_preset = -1
anchor_top = 0.157
anchor_right = 1.0
anchor_bottom = 1.056
offset_top = 43.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
action_mode = 0
text = "Click Screen to Start"
script = ExtResource("3_da4je")

[node name="Bounds" type="Node2D" parent="."]
position = Vector2(0, 200)

[node name="Borders" type="StaticBody2D" parent="Bounds"]
physics_material_override = SubResource("PhysicsMaterial_gxgl3")

[node name="UpperBound" type="CollisionShape2D" parent="Bounds/Borders"]
position = Vector2(800, -50)
shape = SubResource("RectangleShape2D_ihpcj")

[node name="LowerBound" type="CollisionShape2D" parent="Bounds/Borders"]
position = Vector2(800, 850)
shape = SubResource("RectangleShape2D_q0hs8")

[node name="Goals" type="StaticBody2D" parent="Bounds"]

[node name="PlayerGoal" type="Area2D" parent="Bounds/Goals"]
position = Vector2(-20, 400)
script = ExtResource("7_ihpcj")

[node name="PGArea" type="CollisionShape2D" parent="Bounds/Goals/PlayerGoal"]
shape = SubResource("RectangleShape2D_7dyep")
debug_color = Color(0.195271, 0.628758, 0.372253, 0.42)

[node name="OpponentGoal" type="Area2D" parent="Bounds/Goals"]
position = Vector2(1620, 400)
script = ExtResource("8_2wsgh")

[node name="OGArea" type="CollisionShape2D" parent="Bounds/Goals/OpponentGoal"]
shape = SubResource("RectangleShape2D_7dyep")
debug_color = Color(0.790814, 0.388018, 0.487199, 0.42)

[node name="ScoreBoard" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1600.0
offset_bottom = 200.0
size_flags_horizontal = 3

[node name="cldwnTimer" type="Timer" parent="ScoreBoard"]
script = ExtResource("11_fl48u")

[node name="PlrScore" type="RichTextLabel" parent="ScoreBoard"]
show_behind_parent = true
layout_direction = 2
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -100.0
offset_right = 800.0
offset_bottom = 100.0
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0.0209159, 0.212038, 0.367114, 1)
theme_override_constants/outline_size = 40
theme_override_font_sizes/normal_font_size = 55
text = "PLAYER:
0"
vertical_alignment = 1
text_direction = 1
script = ExtResource("11_gycf2")

[node name="PlrProg" type="ProgressBar" parent="ScoreBoard/PlrScore"]
show_behind_parent = true
layout_mode = 0
offset_right = 800.0
offset_bottom = 200.0
theme_override_styles/background = SubResource("StyleBoxFlat_fl48u")
theme_override_styles/fill = SubResource("StyleBoxTexture_c6tex")
show_percentage = false

[node name="ColorRect" type="ColorRect" parent="ScoreBoard/PlrScore"]
visible = false
show_behind_parent = true
layout_mode = 0
offset_right = 800.0
offset_bottom = 200.0
color = Color(0.458824, 0.788235, 0.952941, 1)

[node name="menuNotif" type="RichTextLabel" parent="ScoreBoard/PlrScore"]
visible = false
top_level = true
layout_mode = 0
offset_left = 700.0
offset_top = 200.0
offset_right = 900.0
offset_bottom = 235.0
text = "Press 'R' to open menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OppScore" type="RichTextLabel" parent="ScoreBoard"]
show_behind_parent = true
layout_direction = 3
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1600.0
offset_right = -800.0
offset_bottom = 200.0
grow_horizontal = 0
theme_override_colors/font_outline_color = Color(0.378232, 7.18953e-07, 1.92523e-07, 1)
theme_override_constants/outline_size = 40
theme_override_font_sizes/normal_font_size = 55
text = "COMPUTER:
0"
horizontal_alignment = 2
vertical_alignment = 1
script = ExtResource("12_fl48u")

[node name="OppProg" type="ProgressBar" parent="ScoreBoard/OppScore"]
show_behind_parent = true
layout_direction = 3
layout_mode = 0
offset_right = 800.0
offset_bottom = 200.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_exx7t")
theme_override_styles/fill = SubResource("StyleBoxTexture_jx0u2")
show_percentage = false

[node name="ColorRect" type="ColorRect" parent="ScoreBoard/OppScore"]
visible = false
show_behind_parent = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -800.0
offset_bottom = 200.0
grow_horizontal = 0
color = Color(0.972497, 0.404988, 0.364578, 1)

[node name="UserSeparator" type="VSeparator" parent="ScoreBoard"]
layout_mode = 0
offset_right = 5.0
offset_bottom = 200.0

[node name="ColorRect" type="ColorRect" parent="ScoreBoard/UserSeparator"]
top_level = true
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -2.0
offset_right = 2.0
offset_bottom = -800.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.156863, 0.168627, 0.168627, 1)

[node name="UISeparator" type="HSeparator" parent="ScoreBoard"]
visibility_layer = 4
layout_mode = 0
offset_top = 198.0
offset_right = 1600.0
offset_bottom = 202.0

[node name="ColorRect" type="ColorRect" parent="ScoreBoard/UISeparator"]
visibility_layer = 4
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.1581, 0.17, 0.168017, 1)

[connection signal="prepAI" from="." to="Opponent/OppChar" method="_on_arena_prep_ai"]
[connection signal="prepMax" from="." to="ScoreBoard/PlrScore" method="_on_arena_prep_max"]
[connection signal="prepMax" from="." to="ScoreBoard/OppScore" method="_on_arena_prep_max"]
[connection signal="pressed" from="MainMenu/SETUPBUTTON" to="." method="_on_setupbutton_pressed"]
[connection signal="_opponentAlert" from="Ball" to="Opponent/OppChar" method="_on_ball__opponent_alert"]
[connection signal="_reset" from="Ball" to="." method="_on_ball__reset"]
[connection signal="_reset" from="Ball" to="Player/PlayerChar" method="_on_ball__reset"]
[connection signal="_reset" from="Ball" to="StartButton" method="_on_ball__reset"]
[connection signal="_timerStart" from="Ball" to="Ball/Timer" method="_on_ball__timer_start"]
[connection signal="timeout" from="Ball/Timer" to="Ball" method="_on_timer_timeout"]
[connection signal="pressed" from="StartButton" to="Player/PlayerChar" method="_on_start_button_pressed"]
[connection signal="pressed" from="StartButton" to="Ball" method="_on_start_button_pressed"]
[connection signal="pressed" from="StartButton" to="StartButton" method="_on_pressed"]
[connection signal="pressed" from="StartButton" to="Bounds/Goals" method="_on_start_button_pressed"]
[connection signal="pressed" from="StartButton" to="ScoreBoard/PlrScore" method="_on_start_button_pressed"]
[connection signal="pressed" from="StartButton" to="ScoreBoard/OppScore" method="_on_start_button_pressed"]
[connection signal="pointScored" from="Bounds/Goals/PlayerGoal" to="Ball" method="_on_player_goal_point_scored"]
[connection signal="pointScored" from="Bounds/Goals/PlayerGoal" to="ScoreBoard/OppScore" method="_on_player_goal_point_scored"]
[connection signal="pointScored" from="Bounds/Goals/OpponentGoal" to="Ball" method="_on_opponent_goal_point_scored"]
[connection signal="pointScored" from="Bounds/Goals/OpponentGoal" to="ScoreBoard/PlrScore" method="_on_opponent_goal_point_scored"]
[connection signal="oppTimeout" from="ScoreBoard/cldwnTimer" to="ScoreBoard/OppScore" method="_on_cldwn_timer_opp_timeout"]
[connection signal="plrTimeout" from="ScoreBoard/cldwnTimer" to="ScoreBoard/PlrScore" method="_on_cldwn_timer_plr_timeout"]
[connection signal="gameEndPlr" from="ScoreBoard/PlrScore" to="." method="_on_plr_score_game_end_plr"]
[connection signal="gameEndPlr" from="ScoreBoard/PlrScore" to="Ball" method="_on_plr_score_game_end_plr"]
[connection signal="scorefreeze" from="ScoreBoard/PlrScore" to="ScoreBoard/cldwnTimer" method="_on_plr_score_scorefreeze"]
[connection signal="gameEndOpp" from="ScoreBoard/OppScore" to="." method="_on_opp_score_game_end_opp"]
[connection signal="gameEndOpp" from="ScoreBoard/OppScore" to="Ball" method="_on_opp_score_game_end_opp"]
[connection signal="scorefreeze" from="ScoreBoard/OppScore" to="ScoreBoard/cldwnTimer" method="_on_opp_score_scorefreeze"]
